[package]
name = "pub_sub_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rpss_utils = {git = "https://github.com/samuel-bazinet/rpss_utils", branch = "main" }
